--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,15 @@ body {
   font-family: Arial, sans-serif;
   font-size: 16px;
   color: #222;
-  background-color: #fff;
+  background-color: #FaFaFa;
   text-align: center;
   line-height: 1.4em;
 }
 
 main {
+  margin:0;
   padding: 0;
-  margin-top: 40px;
+  /*margin-top: 40px;*/
 }
 
 h3 {
@@ -27,6 +28,8 @@ a {
 }
 
 form {
+  border: 1px solid black;
+  border-radius: 5px;
   margin: 10px auto;
   padding: 20px;
   max-width: 600px;
@@ -43,4 +46,8 @@ input {
 input[type='text'] {
   width: 220px;
   text-align: center;
+}
+code{
+  background-color: white;
+  color: black;
 }
