--- a/views/index.html
+++ b/views/index.html
@@ -14,18 +14,30 @@
   <body>
     <h1>URL Shortener Microservice</h1>
     <main>
+      <h2>Short URL Creation</h2>
+     <p>
+       Example: <code>POST [project_url]/api/shorturl - 
+       https://www.google.com</code>
+      </p>
       <section>
         <form action="api/shorturl" method="POST">
           <fieldset>
+            
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
             <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
             <input type="submit" value="POST URL" />
+            
           </fieldset>
         </form>
       </section>
     </main>
     <footer>
+      <h2>Example Usage:</h2>
+      <p><a href="https://forum.freecodecamp.org/"> 
+             [this_project_url]/api/shorturl/3</a></p>
+      <h3>Will Redirect to:</h3>
+            <p>https://forum.freecodecamp.org/</p>
       <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
     </footer>
   </body>
